<resources>
    <string name="DEFAULT">NULL Library</string>
    <string name="Smooch_activityConversation">Messages</string>
    <string name="Smooch_btnChangeCard">Change Credit Card</string>
    <string name="Smooch_btnMenu">Choose an Option</string>
    <string name="Smooch_btnPayNow">Pay Now</string>
    <string name="Smooch_btnPaymentCompleted">Payment Completed</string>
    <string name="Smooch_btnSend">Send</string>
    <string name="Smooch_chooseFile">Upload a File</string>
    <string name="Smooch_chooseFromLibrary">Choose from Photo Gallery</string>
    <string name="Smooch_chooseOption">Choose an Option</string>
    <string name="Smooch_conversationLoadingText">Loading conversation…</string>
    <string name="Smooch_creditErrorMessage">An error occurred while processing the card. Try again or use a different card.</string>
    <string name="Smooch_creditMessage">Enter your credit card to send %1$s securely to %2$s.</string>
    <string name="Smooch_errorCouldNotConnect">Could not connect to server.</string>
    <string name="Smooch_errorDisplayImage">Error: Can\'t display image</string>
    <string name="Smooch_errorFileTooLarge">Max file size limit exceeded (%1$s).</string>
    <string name="Smooch_errorFileTypeRejected">Unsupported file type.</string>
    <string name="Smooch_errorPostback">An error occurred while processing your action. Please try again.</string>
    <string name="Smooch_errorSendingMessage">Message not delivered. Tap to retry.</string>
    <string name="Smooch_errorUserOffline">No Internet connection.</string>
    <string name="Smooch_errorVirusDetected">A virus was detected in your file and it has been rejected.</string>
    <string name="Smooch_imageUploadPreviewNotAvailable">Preview not available.</string>
    <string name="Smooch_imageUploadRetry">Tap to reload image.</string>
    <string name="Smooch_imageUploadTapToView">Tap to view%1$s image.</string>
    <string name="Smooch_locationRetrieveFailed">Could not retrieve location.</string>
    <string name="Smooch_locationSendingFailed">Could not send location.</string>
    <string name="Smooch_locationServicesDenied">Access to location services was denied. To enable, go to this app\'s settings and grant \"Location\" access.</string>
    <string name="Smooch_locationServicesDeniedTitle">Location Services Denied</string>
    <string name="Smooch_messageHint">Type a message…</string>
    <string name="Smooch_messageStatusDelivered">Delivered</string>
    <string name="Smooch_messageStatusSeen">Seen</string>
    <string name="Smooch_notificationFallbackText">Sent a message</string>
    <string name="Smooch_openSettings">Open Settings</string>
    <string name="Smooch_problemGettingPhoto">There was a problem retrieving your photo.</string>
    <string name="Smooch_problemLaunchingCamera">There was a problem launching the camera.</string>
    <string name="Smooch_problemSavingPhoto">There was a problem saving your photo.</string>
    <string name="Smooch_relativeTimeDay">%dd ago</string>
    <string name="Smooch_relativeTimeHour">%dh ago</string>
    <string name="Smooch_relativeTimeJustNow">Just now</string>
    <string name="Smooch_relativeTimeMinute">%dm ago</string>
    <string name="Smooch_retrievingFile">Retrieving your file…</string>
    <string name="Smooch_savedCreditMessage">You\'re about to send %1$s securely to %2$s.</string>
    <string name="Smooch_send">Send</string>
    <string name="Smooch_sendPhoto">Send Photo</string>
    <string name="Smooch_sendingMessage">Sending…</string>
    <string name="Smooch_settings_beforeNotificationIntent">io.smooch.ui.NotificationActivity</string>
    <string name="Smooch_settings_chooseMediaMenuKey">chooseMedia</string>
    <string name="Smooch_settings_conversationIdKey">conversationId</string>
    <string name="Smooch_settings_fileProvider">SMOOCH_FILE_PROVIDER</string>
    <string name="Smooch_settings_notificationChannelId">io.smooch.notification</string>
    <string name="Smooch_settings_notificationChannelName">Messages</string>
    <string name="Smooch_settings_notificationIntent">io.smooch.ui.ConversationActivity</string>
    <string name="Smooch_settings_notificationTag">Smooch</string>
    <string name="Smooch_settings_notificationTrigger">SmoochNotification</string>
    <string name="Smooch_settings_notificationTriggerKey">trigger</string>
    <string name="Smooch_settings_shareLocationMenuKey">shareLocation</string>
    <string name="Smooch_settings_shortTimestampFormat">h:mm a</string>
    <string name="Smooch_settings_takePhotoMenuKey">takePhoto</string>
    <string name="Smooch_settings_timestampFormat">MMMM d, h:mm a</string>
    <string name="Smooch_settings_uploadFileMenuKey">uploadFile</string>
    <string name="Smooch_shareLocation">Share Location</string>
    <string name="Smooch_startOfConversation">This is the start of your conversation with the %1$s team. We\'ll stay in touch to help you get the most out of your app.</string>
    <string name="Smooch_takePhoto">Take a Quick Photo</string>
    <string name="Smooch_unsupportedActionType">Unsupported action type</string>
    <string name="Smooch_unsupportedMessageType">Unsupported message type</string>
    <string name="Smooch_webviewLoading">Loading…</string>
    <string name="Smooch_welcome">Feel free to leave us a message about anything that\'s on your mind. We\'ll get back to your questions, suggestion or anything else as soon as we can.</string>
    <string name="Smooch_widthBreakpoint">small</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="alert_description">Alert</string>
    <string name="app_name">MyDialog</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\10</string>
    <string name="catalyst_debug">Debug</string>
    <string name="catalyst_debug_chrome">Debug with Chrome</string>
    <string name="catalyst_debug_chrome_stop">Stop Chrome Debugging</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_nuclide">Debug with Nuclide</string>
    <string name="catalyst_debug_nuclide_error">Failed to communicate with the bundler to enabling debugging with Nuclide.</string>
    <string name="catalyst_debug_stop">Stop Debugging</string>
    <string name="catalyst_dismiss_button">Dismiss\10(ESC)</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector">Toggle Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">Reload\10(R, R)</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_disable">Disable Sampling Profiler</string>
    <string name="catalyst_sample_profiler_enable">Enable Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">408176e8-b139-4e11-bf60-5eeb62500a73</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="madme_ad_skip">Skip</string>
    <string name="madme_ad_unsubscribe">Unsubscribe</string>
    <string name="madme_debug_ads_info_title">Ad(s) info:</string>
    <string name="madme_debug_configuration_info_title">App config info:</string>
    <string name="madme_debug_device_info_title">Device info:</string>
    <string name="madme_debug_device_screen_info_title">Device screen info:</string>
    <string name="madme_debug_sdk_status">SDK status:</string>
    <string name="madme_offers_get_ads">Get Ads</string>
    <string name="madme_send_report_debug">SEND DEBUG REPORT</string>
    <string name="madme_survey_submit">Submit</string>
</resources>