<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:clipChildren="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <View android:id="@+id/Smooch_actionBarSpace" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:animateLayoutChanges="true"/>
        <TextView android:textSize="@dimen/Smooch_header" android:textColor="@color/Smooch_header" android:gravity="center" android:id="@+id/Smooch_serverBanner" android:background="#ff222222" android:paddingTop="10dp" android:paddingBottom="10dp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Smooch_errorCouldNotConnect" android:lineSpacingMultiplier="@dimen/Smooch_lineSpacingMultiplier"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/scrollView" android:background="@color/Smooch_conversationBackground" android:animationCache="false" android:layout_width="match_parent" android:layout_height="0dp" android:listSelector="@android:color/transparent" android:scrollingCache="false" android:transcriptMode="alwaysScroll" android:divider="@null" android:dividerHeight="0dp" android:layout_weight="1"/>
        <RelativeLayout android:background="@color/Smooch_inputTextBackground" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="wrap_content">
            <io.smooch.ui.widget.BackEventEditText android:textSize="@dimen/Smooch_inputTextSize" android:textColor="@color/Smooch_inputTextColor" android:textColorHint="@color/Smooch_inputTextColorHint" android:id="@+id/Smooch_inputText" android:background="@null" android:paddingLeft="10dp" android:paddingTop="4dp" android:paddingRight="10dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/Smooch_messageHint" android:maxLines="@integer/Smooch_settings_inputMaxLines" android:lines="@integer/Smooch_settings_inputMaxLines" android:minLines="1" android:layout_toLeftOf="@+id/Smooch_btnSend" android:layout_toRightOf="@+id/Smooch_btnMenu" android:layout_centerVertical="true" android:inputType="none|text|textCapSentences|textMultiLine" android:imeOptions="actionSend"/>
            <ImageButton android:id="@+id/Smooch_btnSend" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/smooch_btn_send" android:tint="@color/Smooch_accent" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/Smooch_btnSend"/>
            <ImageButton android:id="@+id/Smooch_btnMenu" android:background="@android:color/transparent" android:layout_width="@dimen/Smooch_btnMenuSize" android:layout_height="@dimen/Smooch_btnMenuSize" android:layout_marginLeft="10dp" android:src="@drawable/smooch_btn_menu" android:scaleType="fitXY" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/Smooch_btnMenu"/>
            <View android:id="@+id/Smooch_btnSendHollow" android:background="@drawable/smooch_bg_send_hollow" android:visibility="invisible" android:layout_width="0dp" android:layout_height="0dp" android:layout_alignLeft="@+id/Smooch_btnSend" android:layout_alignTop="@+id/Smooch_btnSend"/>
            <View android:id="@+id/Smooch_btnSendHollowBorder" android:background="@drawable/smooch_bg_send_hollow_border" android:visibility="invisible" android:layout_width="0dp" android:layout_height="0dp" android:layout_alignLeft="@+id/Smooch_btnSend" android:layout_alignTop="@+id/Smooch_btnSend"/>
        </RelativeLayout>
    </LinearLayout>
    <FrameLayout android:id="@+id/webview_fragment_container" android:layout_width="match_parent" android:layout_height="match_parent"/>
</FrameLayout>
