<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/madme_ad_root" android:layout_width="match_parent" android:layout_height="match_parent">
    <ViewStub android:id="@+id/madme_tr_wv_stub" android:layout="@layout/madme_tr_wv" android:inflatedId="@+id/madme_tr_wv" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <ImageView android:id="@+id/madme_img_ad" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop"/>
    <FrameLayout android:id="@+id/madme_web_ad_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <WebView android:id="@+id/madme_web_ad" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <ProgressBar android:layout_gravity="center" android:id="@+id/madme_browser_progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </FrameLayout>
    <RelativeLayout android:id="@+id/madme_video_ad_parent" android:background="#ff000000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <VideoView android:id="@+id/madme_video_ad" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/madme_rating_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="1">
        <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.5"/>
        <FrameLayout android:layout_gravity="center" android:paddingTop="@dimen/madme_standard_padding_double" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.5">
            <com.madme.mobile.sdk.views.MadmeFaceRatingBar android:gravity="top|center_vertical|center_horizontal|center" android:orientation="horizontal" android:id="@+id/madme_rating_face_ratingbar" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <com.madme.mobile.sdk.views.MadmeStarRatingBar android:gravity="top|center_vertical|center_horizontal|center" android:orientation="vertical" android:id="@+id/madme_rating_star_ratingbar" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </FrameLayout>
    </LinearLayout>
    <RelativeLayout android:id="@+id/madme_survey_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <ViewStub android:id="@+id/madme_img_survey_background_stub" android:layout="@layout/madme_img_survey_background" android:inflatedId="@+id/madme_img_survey_background" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <ViewStub android:id="@+id/madme_img_survey_server_background_stub" android:layout="@layout/madme_img_survey_server_background" android:inflatedId="@+id/madme_img_survey_server_background" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <RelativeLayout android:paddingLeft="@dimen/madme_standard_padding" android:paddingTop="@dimen/madme_standard_padding" android:paddingRight="@dimen/madme_standard_padding" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textAppearance="@style/TextAppearance.Large" android:textStyle="bold" android:id="@+id/madme_survey_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <FrameLayout android:id="@+id/madme_survey_content" android:paddingTop="@dimen/madme_survey_header_content_gap" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="6dp" android:layout_above="@+id/madme_survey_page_navigation" android:layout_below="@+id/madme_survey_title"/>
            <RelativeLayout android:id="@+id/madme_survey_page_navigation" android:padding="0dp" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentBottom="true">
                <Button android:textColor="@color/madme_survey_prev_button_text_color" android:gravity="center" android:id="@+id/madme_survey_button_back" android:background="@drawable/madme_survey_prev_button_background" android:layout_width="40dp" android:layout_height="match_parent" android:layout_margin="4dp" android:minWidth="@dimen/madme_survey_prev_button_min_width" android:layout_alignParentLeft="true" android:layout_centerInParent="true"/>
                <Button android:textColor="@color/madme_survey_next_button_text_color" android:gravity="center" android:id="@+id/madme_survey_button_next" android:background="@drawable/madme_survey_next_button_background" android:layout_width="40dp" android:layout_height="match_parent" android:layout_margin="4dp" android:minWidth="@dimen/madme_survey_submit_button_min_width" android:layout_alignParentRight="true" android:layout_centerInParent="true"/>
                <Button android:textColor="@color/madme_survey_submit_button_text_color" android:id="@+id/madme_survey_button_submit" android:background="@drawable/madme_survey_submit_button_background" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_margin="5dp" android:minWidth="@dimen/madme_survey_submit_button_min_width" android:text="@string/madme_survey_submit" android:layout_centerInParent="true" android:textAllCaps="false"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@+id/madme_ad_view_controls" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/madme_ad_view_header" android:background="@color/madme_ad_header_background_color" android:paddingLeft="@dimen/madme_ad_header_padding_left" android:paddingTop="@dimen/madme_ad_header_padding_top" android:paddingRight="@dimen/madme_ad_header_padding_right" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/madme_postpone_ad" android:background="@android:color/transparent" android:padding="2dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp" android:layout_toLeftOf="@+id/madme_cancel_ad" app:srcCompat="@drawable/madme_button_postpone_icon"/>
            <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/madme_cancel_ad" android:background="@android:color/transparent" android:padding="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" app:srcCompat="@drawable/madme_btn_cancel"/>
            <include android:id="@+id/madme_vendor_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" layout="@layout/madme_ad_vendor_logo"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/madme_ad_view_footer" android:background="@color/madme_ad_footer_background_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@+id/madme_buttons_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="@dimen/madme_standard_padding" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.2"/>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/madme_unsubscribe_holder" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.6">
                    <ImageView android:id="@+id/madme_expand_more" android:layout_width="36dp" android:layout_height="20dp" android:scaleType="centerCrop" app:srcCompat="@drawable/madme_ic_expand_less_white"/>
                    <TextView android:textSize="12dp" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/madme_ad_unsubscribe"/>
                </LinearLayout>
                <LinearLayout android:gravity="right|center_vertical|center_horizontal|center|end" android:orientation="horizontal" android:padding="@dimen/madme_standard_padding" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.2">
                    <androidx.appcompat.widget.AppCompatImageButton android:gravity="center_vertical" android:id="@+id/madme_terms_button" android:background="@android:color/transparent" android:focusable="false" android:focusableInTouchMode="false" android:visibility="visible" android:layout_width="32dp" android:layout_height="32dp" android:textOn="" android:textOff="" app:srcCompat="@drawable/madme_ic_ad_tandc"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/madme_buttons_container">
                <com.madme.mobile.sdk.views.ExpandableLinearLayout android:orientation="vertical" android:id="@+id/madme_expandableLayout" android:layout_width="match_parent" android:layout_height="wrap_content" app:madme_ael_duration="500" app:madme_ael_expanded="false">
                    <FrameLayout android:id="@+id/madme_opt_out_fragment_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/madme_standard_margin" android:layout_marginBottom="0dp" android:layout_toLeftOf="@+id/madme_terms_button" android:layout_centerVertical="true"/>
                </com.madme.mobile.sdk.views.ExpandableLinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton android:textSize="15sp" android:textColor="@color/madme_ad_action_button_text_color" android:layout_gravity="bottom" android:id="@+id/madme_ad_action_button" android:background="@drawable/madme_ad_action_button_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/madme_standard_margin" android:maxWidth="300dp" android:minWidth="200dp" android:layout_above="@+id/madme_ad_view_footer" android:layout_centerHorizontal="true" android:layout_alignWithParentIfMissing="true"/>
        <Button android:textSize="12sp" android:layout_gravity="bottom" android:id="@+id/madme_skip" android:padding="@dimen/madme_standard_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/madme_standard_margin" android:text="@string/madme_ad_skip" android:layout_above="@+id/madme_ad_action_button" android:layout_alignParentRight="true" android:layout_alignWithParentIfMissing="true"/>
        <Button android:textSize="12sp" android:layout_gravity="top" android:id="@+id/madme_mute" android:padding="@dimen/madme_standard_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/madme_standard_margin" android:drawableLeft="@drawable/madme_ic_mute_wrap" android:layout_below="@+id/madme_ad_view_header" android:layout_alignParentRight="true" android:drawableStart="@drawable/madme_ic_mute_wrap"/>
        <TextView android:textSize="14sp" android:gravity="center_horizontal" android:layout_gravity="top" android:id="@+id/madme_time_display" android:background="@color/madme_ad_time_display_background_color" android:padding="@dimen/madme_standard_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/madme_standard_margin" android:minEms="2" android:layout_below="@+id/madme_ad_view_header" android:layout_alignParentLeft="true"/>
    </RelativeLayout>
</FrameLayout>
